--- a/photography.html
+++ b/photography.html
@@ -16,7 +16,6 @@
                 <li><a href="about.html">About Me</a></li>
                 <li><a href="projects.html">Projects</a></li>
                 <li><a href="contact.html">Contact</a></li>
-                <li><a href="photography.html">Photography</a></li>
             </ul>
         </nav>
     </header>
@@ -43,48 +42,7 @@
                 <div class="info-toggle" data-info="info1">&#9660;</div>
                 <p id="info1" class="photo-info">Amid the serene silence of a wintry landscape, a lone figure stands in reflection, where the vast sky meets the frozen expanse, contemplating the infinite possibilities that lie in the quiet moments of solitude.</p>
             </section>
-            <section class="photo-section">
-                <h2>Serenity on the Lake</h2>
-                <img src="photo2.png" alt="Serenity on the Lake" class="photo-img">
-                <div class="info-toggle" data-info="info2">&#9660;</div>
-                <p id="info2" class="photo-info">Where water mirrors the sky and ancient temples whisper stories of old, every oar stroke stirs more than just the surface it stirs the soul, blending past and present in the serene waters of the lake.</p>
-            </section>
-            <section class="photo-section">
-                <h2>Dance of the Dolphins</h2>
-                <img src="photo3.png" alt="Dance of the Dolphins" class="photo-img">
-                <div class="info-toggle" data-info="info3">&#9660;</div>
-                <p id="info3" class="photo-info">Amidst the playful waves, dolphins leap, celebrating the joy of the moment under the watchful eyes of enchanted onlookers a reminder that nature's ballet is open for all who seek its beauty.</p>
-            </section>
-            <section class="photo-section">
-                <h2>Verdant Steps</h2>
-                <img src="photo4.png" alt="Verdant Steps" class="photo-img">
-                <div class="info-toggle" data-info="info4">&#9660;</div>
-                <p id="info4" class="photo-info">In the heart of Bali, nature's greenery is crafted into magnificent terraces, each layer a step closer to the sky harmonizing the rhythm of life with the contours of the earth.</p>
-            </section>
-            <section class="photo-section">
-                <h2>Twilight Whisper</h2>
-                <img src="photo5.png" alt="Twilight Whisper" class="photo-img">
-                <div class="info-toggle" data-info="info5">&#9660;</div>
-                <p id="info5" class="photo-info">As the sun kisses the horizon, its fading light whispers secrets to the waves, casting a golden glow that dances across the restless ocean a fleeting moment of serene beauty.</p>
-            </section>
-            <section class="photo-section">
-                <h2>Harmony in the Sundarbans</h2>
-                <img src="photo6.png" alt="Harmony in the Sundarbans" class="photo-img">
-                <div class="info-toggle" data-info="info6">&#9660;</div>
-                <p id="info6" class="photo-info">In the dappled sunlight of the Sundarbans, deer roam freely, their patterns as intricate as the forest's own roots a serene symphony of life thriving in the world's largest mangrove sanctuary.</p>
-            </section>
-            <section class="photo-section">
-                <h2>Crimson Tides</h2>
-                <img src="photo7.png" alt="Crimson Tides" class="photo-img">
-                <div class="info-toggle" data-info="info7">&#9660;</div>
-                <p id="info7" class="photo-info">As the sun dips below the horizon, it paints the waters of the Sundarbans in shades of crimson and gold, leaving a trail of light for the weary sailor to follow home.</p>
-            </section>
-            <section class="photo-section">
-                <h2>Evening Glow by the Shore</h2>
-                <img src="photo8.png" alt="Evening Glow by the Shore" class="photo-img">
-                <div class="info-toggle" data-info="info8">&#9660;</div>
-                <p id="info8" class="photo-info">This title reflects the peaceful setting and the atmospheric lighting of the scene, enhancing the mood of the evening by the sea.</p>
-            </section>
+            <!-- Repeat for other photos -->
         </div>
     </main>
 </body>
