--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,16 @@
     <meta charset="UTF-8">
     <title>Contact - Kamrul Noor</title>
     <link rel="stylesheet" href="styles.css">
+    <script>
+        function sendEmail() {
+            const name = document.getElementById('name').value;
+            const email = document.getElementById('email').value;
+            const message = document.getElementById('message').value;
+            const subject = `Message from ${name}`;
+            const body = `Name: ${name}%0D%0AEmail: ${email}%0D%0A%0D%0A${message}`;
+            window.location.href = `mailto:your-email@example.com?subject=${subject}&body=${body}`;
+        }
+    </script>
 </head>
 <body>
     <header>
@@ -14,30 +24,27 @@
             <ul class="right">
                 <li><a href="about.html">About Me</a></li>
                 <li><a href="projects.html">Projects</a></li>
-                <li><a href="contact.html">Contact</a></li>
                 <li><a href="photography.html">Photography</a></li>
             </ul>
         </nav>
     </header>
     <main id="contact">
         <section class="contact-content">
-            <h1>Contact Me</h1>
-            <form target="_blank" action="https://formsubmit.co/kamrulahsan.noor@ucalgary.ca" method="POST">
-                <input type="hidden" name="_next" value="thankyou.html">
-                <input type="hidden" name="_captcha" value="false">
+            <h1>Contact</h1>
+            <form onsubmit="sendEmail(); return false;">
                 <div class="form-group">
-                    <div class="form-row">
-                        <input type="text" name="First Name" placeholder="First Name" required>
-                        <input type="text" name="Last Name" placeholder="Last Name" required>
-                    </div>
-                    <div class="form-row">
-                        <input type="email" name="Email" placeholder="Email" required>
-                    </div>
+                    <label for="name">Name</label>
+                    <input type="text" id="name" name="name" required>
                 </div>
                 <div class="form-group">
-                    <textarea name="Message" placeholder="Your Message" rows="5" required></textarea>
+                    <label for="email">Email</label>
+                    <input type="email" id="email" name="email" required>
                 </div>
-                <button type="submit" class="btn-submit">Submit Form</button>
+                <div class="form-group">
+                    <label for="message">Message</label>
+                    <textarea id="message" name="message" rows="5" required></textarea>
+                </div>
+                <button type="submit" class="btn-submit">Send Message</button>
             </form>
         </section>
     </main>
